Fix hoodie hero tiling on tablet

--- a/mobile/hero/hero.css
+++ b/mobile/hero/hero.css
@@ -86,6 +86,7 @@
   width: 100%;
   height: 110%;
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: 35% center;
   transition: transform 1s;
   transform: translate3d(0, 0, 0) scale(1);
@@ -307,7 +308,6 @@
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-el[data-category="hoodies"].s--active .hero-el__bg:before {
     background-position: 35% calc(10% + 20px) !important;
-    background-size: 110% !important;
   }
 }
 
